--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://bsidessg.org'
+baseURL = 'https://bsidessg.github.io/bsidessg-website/'
 languageCode = 'en-us'
 theme = "nightfall"
 
